gateway 수정